--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -10,6 +8,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -18,6 +17,15 @@
 .env.test.local
 .env.production.local
 
+# local env files (hide your API keys)
+.env
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# editor/IDE files
+.vscode/
+.idea/
+*.swp
